btn alignment fixed

--- a/blocks/fund-card/fund-card.scss
+++ b/blocks/fund-card/fund-card.scss
@@ -851,6 +851,9 @@
             border-radius: var(--border-radius-8);
             font-size: 14px;
             line-height: var(--button-small-line-height);
+            display: flex;
+            justify-content: center;
+            align-items: center;
           }
         }
       }
